fix: make post table look decent on mobile device

--- a/src/components/post/PostTableHeader/style.scss
+++ b/src/components/post/PostTableHeader/style.scss
@@ -1,6 +1,8 @@
 .post-table__header {
   display: flex;
   background: #343a40;
+  width: 100%;
+  min-width: fit-content;
 
   .post-table__row-cell {
     white-space: nowrap;
@@ -12,10 +14,7 @@
     align-items: center;
     justify-content: center;
     height: 30px;
-
-    &:not(.content) {
-      border-right: 1px solid #464d55;
-    }
+    border-right: 1px solid #464d55;
 
     &.id {
       width: 30px;
@@ -36,6 +35,7 @@
 
     &.content {
       flex-grow: 1;
+      min-width: 150px;
     }
   }
 }
