--- a/src/components/post/PostTableRow/style.scss
+++ b/src/components/post/PostTableRow/style.scss
@@ -1,6 +1,8 @@
 .post-table__row {
   display: flex;
   background: #343a40;
+  width: 100%;
+  min-width: fit-content;
 
   svg path {
     fill: #343a40;
@@ -17,14 +19,11 @@
   &-cell {
     color: white;
     padding: 20px 10px;
+    border-right: 1px solid #464d55;
 
     img {
       width: 80px;
       height: 80px;
-    }
-
-    &:not(.content) {
-      border-right: 1px solid #464d55;
     }
 
     &.id {
@@ -66,6 +65,7 @@
 
     &.post_content {
       flex-grow: 1;
+      min-width: 150px;
 
       .mention {
         font-weight: bold;
